Update mappings to new github location

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 
   <!-- If you have custom icon, replace these as appropriate.
        You can generate them at realfavicongenerator.net -->
-  <link rel="icon" type="image/x-icon" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/favicon.ico" />
-  <link rel="icon" type="image/png" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="192×192" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/android-chrome-192x192.png" /> <!-- Android (192px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-114x114.png"> <!-- For iPhone 4 Retina display (114px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-72x72.png"> <!-- For iPad (72px) -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-144x144.png"> <!-- For iPad retinat (144px) -->
-  <link rel="apple-touch-icon-precomposed" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-57x57.png"> <!-- For iPhone (57px) -->
-  <link rel="mask-icon" href="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/safari-pinned-tab.svg" color="#ffffff"> <!-- Safari icon for pinned tab -->
+  <link rel="icon" type="image/x-icon" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/favicon.ico" />
+  <link rel="icon" type="image/png" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192×192" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/android-chrome-192x192.png" /> <!-- Android (192px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-114x114.png"> <!-- For iPhone 4 Retina display (114px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-72x72.png"> <!-- For iPad (72px) -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-144x144.png"> <!-- For iPad retinat (144px) -->
+  <link rel="apple-touch-icon-precomposed" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/apple-icon-57x57.png"> <!-- For iPhone (57px) -->
+  <link rel="mask-icon" href="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/safari-pinned-tab.svg" color="#ffffff"> <!-- Safari icon for pinned tab -->
   <meta name="msapplication-TileColor" content="#2b5797"> <!-- MS Icons -->
-  <meta name="msapplication-TileImage" content="https://khawkins98.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/mstile-144x144.png">
+  <meta name="msapplication-TileImage" content="https://ebiwd.github.io/EBI-Framework/images/logos/EMBL-EBI/favicons/mstile-144x144.png">
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
   <link rel="stylesheet" href="css/ebi-global.css" type="text/css" media="all">
-  <link rel="stylesheet" href="https://khawkins98.github.io/EBI-Framework/fonts/fonts.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/fonts/fonts.css" type="text/css" media="all">
 
   <!-- Use this CSS file for any custom styling -->
   <!--
@@ -48,11 +48,11 @@
   <!-- 
   <meta name="ebi-localmasthead-color" content="#000">
   -->
-  <meta name="ebi-localmasthead-image" content="https://khawkins98.github.io/EBI-Framework/images/backgrounds/embl-ebi-background-4.jpg">
+  <meta name="ebi-localmasthead-image" content="https://ebiwd.github.io/EBI-Framework/images/backgrounds/embl-ebi-background-4.jpg">
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="https://khawkins98.github.io/EBI-Framework/css/embl-petrol-colours.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/embl-petrol-colours.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
@@ -63,7 +63,7 @@
 
 
   <!-- All JavaScript at the bottom, except for Modernizr -->
-  <script src="https://khawkins98.github.io/EBI-Framework/libraries/modernizr/modernizr.custom.49274.js"></script>
+  <script src="https://ebiwd.github.io/EBI-Framework/libraries/modernizr/modernizr.custom.49274.js"></script>
 
 </head>
 
@@ -283,7 +283,7 @@
                 </blockquote>
                 <p>This guide does not offer prescriptive solutions for every scenario, but integrates a wide range of pull quotes, form boxes, menus, and more to show you how things should be done.</p>
                 <p>Also <a href="http://foundation.zurb.com/sites/docs/global.html">consult the Foundation 6 docs <i class="icon icon-generic" data-icon="x"></i></a>, as this framework leverages that toolset.</p>
-                <p>We plan to host workshops to educate on the tooling and address issues or concerns, <a href="https://github.com/khawkins98/EBI-Framework/issues/1">register you interest here</a> or if you don't have a GitHub account e-mail khawkins@ebi.ac.uk</p>
+                <p>We plan to host workshops to educate on the tooling and address issues or concerns, <a href="https://github.com/ebiwd/EBI-Framework/issues/1">register you interest here</a> or if you don't have a GitHub account e-mail khawkins@ebi.ac.uk</p>
                 <p>If you need technical guidance or have questions, <a href="#help">see the help section</a>.</p>
 
                 <div class="callout warning">
@@ -294,7 +294,7 @@
                     <li>Refresh the EBI Compliance theme to be more visually compliant with EMBL-EBI standards.</li>
                     <li>Offer optional reusable tooling to make the lives of developers easier and to make EMBL-EBI sites look more consistent with less effort.</li>
                   </ol>
-                  <p>The documentation below is a work in progress. We are looking for input and concerns about the scope, direction and technical solutions. Post to <a href="https://github.com/khawkins98/EBI-Framework/issues/1">the GitHub issue queue</a>, if you don't have a GitHub account: e-mail khawkins@ebi.ac.uk</p>
+                  <p>The documentation below is a work in progress. We are looking for input and concerns about the scope, direction and technical solutions. Post to <a href="https://github.com/ebiwd/EBI-Framework/issues/1">the GitHub issue queue</a>, if you don't have a GitHub account: e-mail khawkins@ebi.ac.uk</p>
                   <p>Also see the <a href="sample-site/">sample pages</a> to get an idea of how real content would look and work using the framework.</p>
                 </div>
 
@@ -305,10 +305,10 @@
 
                 <dl>
                   <dt>Implementing a new project?</dt>
-                  <dd><p>If you're starting from scratch, check out the collection of boilerplate code, check out the source, and get going. <a href="https://khawkins98.github.io/EBI-Framework/sample-site/" class="readmore">To the boilerplate</a></p></dd>
+                  <dd><p>If you're starting from scratch, check out the collection of boilerplate code, check out the source, and get going. <a href="https://ebiwd.github.io/EBI-Framework/sample-site/" class="readmore">To the boilerplate</a></p></dd>
 
                   <dt>Updating an existing site?</dt>
-                  <dd><p>If you're updating a site that is already using the EBI Compliance theme, you'll just need to replace a few JS/CSS files, change some layout classes, and make minore tweaks. It could take as little as 30 minutes. <a href="https://github.com/khawkins98/EBI-Framework/commit/a49d3668f2b80058be8c277d875c8b06f47a7237" class="readmore">Check out the sample migration</a></p></dd>
+                  <dd><p>If you're updating a site that is already using the EBI Compliance theme, you'll just need to replace a few JS/CSS files, change some layout classes, and make minore tweaks. It could take as little as 30 minutes. <a href="https://github.com/ebiwd/EBI-Framework/commit/a49d3668f2b80058be8c277d875c8b06f47a7237" class="readmore">Check out the sample migration</a></p></dd>
 
                 </dl>
 
@@ -316,8 +316,8 @@
                 <p>The framework is built with modern best practices and targets browsers shipped within the past three years; though other browsers should still handle the content and appearance well (graceful degradation). The framework is also mobile responsive (Responsive Web Design), so you won't have to spend too much time adapting for mobile.</p>
                 <p>To help us help you, we've used the Foundation Framework (version 6) as a baseline. Using this we get a robust set of web components (tool tips, forms, sliders, and modal boxes) as well as technical guidance and extensive open source community testing -- and, perhaps, you'll be fortunate enough to already have a developer with experience with Foundation.</p>
                 <p>But we've taken care to make the implementation non-intrusive, so if you don't want to use these features, they won't likely get in your way.</p>
-                <p>The easiest way to implement the style guide is to <a href="https://khawkins98.github.io/EBI-Framework/sample-site/#boilerplate">download the EBI boilerplate</a> - use those HTML files as a template for your own pages. It contains the HTML for the EBI header and footer and place holders for your project name / logo and page content. It also links to the core stylesheets you'll need to make your web pages look like part of the EBI website.</p>
-                <p><a href="https://github.com/khawkins98/EBI-Framework/archive/master.zip" class="button sans-serif">Download the framework</a> or <a href="https://github.com/khawkins98/EBI-Framework/">view on Github</a></p>
+                <p>The easiest way to implement the style guide is to <a href="https://ebiwd.github.io/EBI-Framework/sample-site/#boilerplate">download the EBI boilerplate</a> - use those HTML files as a template for your own pages. It contains the HTML for the EBI header and footer and place holders for your project name / logo and page content. It also links to the core stylesheets you'll need to make your web pages look like part of the EBI website.</p>
+                <p><a href="https://github.com/ebiwd/EBI-Framework/archive/master.zip" class="button sans-serif">Download the framework</a> or <a href="https://github.com/ebiwd/EBI-Framework/">view on Github</a></p>
 
                 <h3>Framework components</h3>
                 <p>This framework functions many front-end solutions.</p>
@@ -327,14 +327,14 @@
                   <ol>
                     <li>Core HTML structure: The basic HTML markkup structure for the page: global-nav black bar, local-nav area, main content div, footer, etc.</li>
                     <li><a href="css/ebi-global.css">EBI base CSS styles</a>: Our basic look/colours.</li>
-                    <li><a href="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css">Foundation base CSS styles</a>: this provides the base grid structure, style resets, and core structure of the page.</li>
+                    <li><a href="https://ebiwd.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css">Foundation base CSS styles</a>: this provides the base grid structure, style resets, and core structure of the page.</li>
                     <li><a href="css/embl-petrol-colours.css">Your site's CSS colours</a>: Colours specific to your service/site.</li>
                     <li>Fonts.css</li>
                     <li>jQuery 1.10.2: Slightly older versions may be compatible.</li>
                       <ul>
                         <li>Foundation JS</li>
                         <ul>
-                          <li><a href="https://khawkins98.github.io/EBI-Framework/js/foundationExtendEBI.js">EBI JS tweaks to Foundation</a>: A series of value adds that build atop Foundation.</li>
+                          <li><a href="https://ebiwd.github.io/EBI-Framework/js/foundationExtendEBI.js">EBI JS tweaks to Foundation</a>: A series of value adds that build atop Foundation.</li>
                         </ul>
                       </ul>
                     <li>EBI JS</li>
@@ -370,7 +370,7 @@
                 <h2>Design patterns</h2>
                 <p>This page acts as a "living guide" by implementing a broad range of interface items, use them as a guide for how to make your page elements look and function.</p>
 
-                <p>For edge cases not covered, please <a href="https://github.com/khawkins98/EBI-Framework/issues">open an issue in the tracker</a>. We'll update this living style guide with feedback that grows from there.</p>
+                <p>For edge cases not covered, please <a href="https://github.com/ebiwd/EBI-Framework/issues">open an issue in the tracker</a>. We'll update this living style guide with feedback that grows from there.</p>
               </section>
 
               <section id="navigation" data-magellan-target="navigation">
@@ -1242,14 +1242,14 @@
                   <div class="columns medium-6">
 
                     <p>If you a question about the background of this guide or have philisophical suggestion <a href="https://www.ebi.ac.uk/seqdb/confluence/display/WGC/Web+Guidelines+committee">contact the EBI Web Guidelines Committee</a>, whom is responsibile for the governance and direction.</p>
-                    <p>For technical matters of "how do I do?", <a href="https://github.com/khawkins98/EBI-Framework/issues">visit the issue queue on GitHub</a>.</p>
+                    <p>For technical matters of "how do I do?", <a href="https://github.com/ebiwd/EBI-Framework/issues">visit the issue queue on GitHub</a>.</p>
 
                   </div>
 
                   <div class="columns callout secondary medium-6">
                     <h3>Want to offer help?</h3>
                     <p>Get in touch, or subscribe to the issue queue, collaboration and pull requests welcome!</p>
-                    <a href="https://github.com/khawkins98/EBI-Framework/" class="button readmore">To the GitHub repo!</a>
+                    <a href="https://github.com/ebiwd/EBI-Framework/" class="button readmore">To the GitHub repo!</a>
                   </div>
 
                 </div>
@@ -1268,10 +1268,10 @@
               <p>These resources will help you engage and understand the EBI Framework.</p>
               <div class="">
                 <ul class="menu vertical">
-                  <li class=""><a href="https://github.com/khawkins98/EBI-Framework">GitHub repository <i class="icon icon-generic" data-icon="x"></i></a></li>
-                  <li class=""><a href="https://github.com/khawkins98/EBI-Framework/issues">Issue queue <i class="icon icon-generic" data-icon="x"></i></a></li>
-                  <li class=""><a href="https://khawkins98.github.io/EBI-Framework/sample-site/">Sample pages</a></li>
-                  <li class=""><a href="https://khawkins98.github.io/EBI-Framework/fonts/index.html">Icon gallery</a></li>
+                  <li class=""><a href="https://github.com/ebiwd/EBI-Framework">GitHub repository <i class="icon icon-generic" data-icon="x"></i></a></li>
+                  <li class=""><a href="https://github.com/ebiwd/EBI-Framework/issues">Issue queue <i class="icon icon-generic" data-icon="x"></i></a></li>
+                  <li class=""><a href="https://ebiwd.github.io/EBI-Framework/sample-site/">Sample pages</a></li>
+                  <li class=""><a href="https://ebiwd.github.io/EBI-Framework/fonts/index.html">Icon gallery</a></li>
                 </ul>
               </div>
             </div>
@@ -1323,13 +1323,13 @@
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/plugins.js"></script>
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/script.js"></script>
   -->
-  <script defer="defer" src="https://khawkins98.github.io/EBI-Framework/js/cookiebanner.js"></script>
-  <script defer="defer" src="https://khawkins98.github.io/EBI-Framework/js/foot.js"></script>
-  <script defer="defer" src="https://khawkins98.github.io/EBI-Framework/js/script.js"></script>
+  <script defer="defer" src="https://ebiwd.github.io/EBI-Framework/js/cookiebanner.js"></script>
+  <script defer="defer" src="https://ebiwd.github.io/EBI-Framework/js/foot.js"></script>
+  <script defer="defer" src="https://ebiwd.github.io/EBI-Framework/js/script.js"></script>
 
   <!-- The Foundation theme JavaScript -->
-  <script src="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
-  <script src="https://khawkins98.github.io/EBI-Framework/js/foundationExtendEBI.js"></script>
+  <script src="https://ebiwd.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
+  <script src="https://ebiwd.github.io/EBI-Framework/js/foundationExtendEBI.js"></script>
   <script type="text/JavaScript">$(document).foundation();</script>
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
 <!--
